Refatoração do projeto

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
 
     <title>Desafio one page</title>
 </head>
+
 <body>
 
     <header class="cabecalho">
@@ -19,7 +21,8 @@
 
             <div class="texto">
                 <h1>Lorem ipsum dolor sit amet</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu massa sit amet augue consectetur ullamcorper non ac massa.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eu massa sit amet augue consectetur
+                    ullamcorper non ac massa.</p>
                 <a href="#" class="btn">Botão</a>
             </div>
 
@@ -102,7 +105,7 @@
 
         </section>
     </main>
-    
+
     <footer class="robape">
 
         <h2>Entre em contato</h2>
@@ -117,8 +120,9 @@
             </div>
         </form>
 
+        <div class="direitos">Todos os direitos Reservados | <span>Criado Por Allan Lima</span></div>
     </footer>
-    
-    <div class="direitos">Todos os direitos Reservados | <span>Criado Por Allan Lima</span></div>
+
 </body>
+
 </html>
